--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/composition-api": "^0.5.0",
     "core-js": "^3.6.4",
+    "validate.js": "^0.13.1",
+    "validatorjs": "^3.18.1",
+    "vee-validate": "^3.3.0",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.6"
+    "vue-router": "^3.1.6",
+    "vuelidate": "^0.7.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
